1. Update AdvancedGroovyConsole.bat to use gradlew run 2. Upgrade to Java 11 and Groovy 3.0.7 (if not already upgraded) 3. Fix compilation errors in Java 11